--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                             <th>Book name</th>
                             <th>Book Title</th>
                             <th>Book Author</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody id="bookList">
@@ -56,7 +57,7 @@
 
         </div>
     </div>
-    <script src="/app.js"></script>
+    <script src="/app-es6.js"></script>
 </body>
 
 </html>
